fix: no line break on lists

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -23,6 +23,7 @@ ul {
 
   li {
     display: inline;
+    white-space: nowrap;
     padding: 0 1em;
   }
 }
